// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GoogleMapReacts /> render if \`props.isShowingApproximateLocation\` is \`true\` should render the right structure 1`] = `
<Component
  bootstrapURLKeys={
    Object {
      "key": "some key",
    }
  }
  center={
    Object {
      "lat": 1,
      "lng": 0,
    }
  }
  onChange={[Function]}
  options={
    Object {
      "some": "options ",
    }
  }
  zoom={13}
>
  <GoogleMapMarker
    imageSrc="http://i1.cdbcdn.com/images/google-maps-approximate-location.png"
    latitude={1}
    longitude={0}
    style={
      Object {
        "transform": "translate(-50%, -50%)",
      }
    }
  />
</Component>
`;

exports[`<GoogleMapReacts /> render if \`props.isShowingExactLocation\` is \`true\` should render the right structure 1`] = `
<Component
  bootstrapURLKeys={
    Object {
      "key": "some key",
    }
  }
  center={
    Object {
      "lat": 1,
      "lng": 0,
    }
  }
  onChange={[Function]}
  options={
    Object {
      "some": "options ",
    }
  }
  zoom={13}
>
  <GoogleMapMarker
    imageSrc="https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi2.png"
    latitude={1}
    longitude={0}
    style={
      Object {
        "transform": "translate(-50%, -100%)",
      }
    }
  />
</Component>
`;

exports[`<GoogleMapReacts /> render if \`props.markers\` is populated should render the right structure 1`] = `
<Component
  bootstrapURLKeys={
    Object {
      "key": "some key",
    }
  }
  center={
    Object {
      "lat": 1,
      "lng": 0,
    }
  }
  onChange={[Function]}
  options={
    Object {
      "some": "options ",
    }
  }
  zoom={13}
>
  <div
    key="a"
    lat={41.38}
    lng={2.15}
  />
  <div
    key="b"
    lat={41.375}
    lng={2.16}
  />
</Component>
`;

exports[`<GoogleMapReacts /> render should render the right structure 1`] = `
<Component
  bootstrapURLKeys={
    Object {
      "key": "some key",
    }
  }
  center={
    Object {
      "lat": 1,
      "lng": 0,
    }
  }
  onChange={[Function]}
  options={
    Object {
      "some": "options ",
    }
  }
  zoom={13}
/>
`;
